feat: add function to insert user data into Supabase
- Create function to insert user data into Supabase PostgreSQL database (tables users & user_profiles)
- Rename `./server/service/auth.mjs` to `./server/service/supabaseAuth.service.mjs`
- Fix server crash bug when PAPERTRAIL_HOST variable is not defined
